--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="bank_account.js"></script>
+    <script type="module" src="banking_system.js"></script>
 </body>
 </html>
